# Raven

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  RavenConfig.h.in  config.h.in  license.txt  main.cpp
assets/shaders/sources/: shader.vert
assets/shaders/sources/folder1/: shader.vert
assets/shaders/sources/simple/: shader.frag  shader.vert
shader/: Shader.metal
shader/GLSL/: simple.frag  simple.vert
shader/source/: simple.frag
source/: Callback.cpp  Callback.h  Callbacks.cpp  Callbacks.h  Camera.h  FileSystem.cpp  FileSystem.h  Image.cpp  Image.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TypeID.cpp  TypeID.h  UserPointer.h  VAO.cpp  VAO.h  Window.cpp  Window.h  engine.hpp  glfwCallbacks.cpp  glfwCallbacks.h
source/Controls/: Mouse.cpp  Mouse.h
source/ECS/: Component.h  ComponentArray.h  ComponentManager.h  Coordinator.h  Entity.h  EntityManager.h  IComponentArray.h  System.h  SystemManager.h
source/ECS/Components/: Transform.h
source/Engine/: Engine.cpp  Engine.h
source/engine/: debug_messenger.cpp  debug_messenger.h  engine.cpp  extensions.cpp  extensions.h  instance.cpp  instance.h  queue_family_details.cpp  shader.cpp  shader.hpp  swapchain_details.cpp
source/example/: example.hpp  metal.mm  opengl.cpp
